# Wombat-CC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.py  build.zig  build.zig.zon  flake.nix
.githooks/: pre-push
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml  sync-template.yml
configs/: config.dev.yaml  config.example.yaml  config.prod.yaml
docs/: README.md  architecture.md  build.md  ci-cd.md  development.md  faq.md  usage.md
include/: library.h  ports.h  positions.h  second.h  servos.h  tasks.h  threads.h  translation.h
include/kipr/: config.h  wombat.h
library-template/: README.md  build.zig.zon
library-template/include/: LibraryTemplate.hpp
library-template/src/: LibraryTemplate.cpp
src/: library_usage_example.cpp  main.c  main.cpp  main.zig  ports.c  positions.c  servos.c  threads.c  translation.c
